--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "bufferutil": "^3.0.1",
     "discord.js": "^11.1.0",
+    "dotenv": "^4.0.0",
     "uws": "^0.14.5"
   }
 }
