--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bufferutil": "^3.0.1",
     "discord.js": "^11.1.0",
     "dotenv": "^4.0.0",
+    "node-persist": "^2.0.11",
     "uws": "^0.14.5"
   }
 }
