--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "xxami",
   "dependencies": {
     "bufferutil": "^3.0.1",
+    "cheerio": "^1.0.0-rc.1",
     "discord.js": "^11.1.0",
     "dotenv": "^4.0.0",
     "node-persist": "^2.0.11",
+    "request": "^2.81.0",
     "uws": "^0.14.5"
   },
   "scripts": {
